# sylphy_echo

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  STM32F413CHUx_FLASH.ld  flash_write.bat  openocd.cfg  openocd_start.bat  sylphy_echo.ioc
.devcontainer/: devcontainer.json
Application/: CMakeLists.txt
Application/Inc/: adachi.hpp  maze.hpp  path.hpp  position.hpp  potential.hpp
Application/Src/: adachi.cpp  maze.cpp  path.cpp  position.cpp  potential.cpp
Core/: CMakeLists.txt  arm-none-eabi-gcc_toolchain.cmake
Core/Inc/: main.h  spi.h  stm32f4xx_it.h  tim.h
Core/Src/: adc.c  dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Drivers/CMSIS/Include/: cmsis_armcc.h:com.dropbox.attrs  cmsis_armclang.h:com.dropbox.attrs  cmsis_compiler.h:com.dropbox.attrs  cmsis_gcc.h:com.dropbox.attrs  cmsis_iccarm.h:com.dropbox.attrs  cmsis_version.h:com.dropbox.attrs  core_armv8mbl.h:com.dropbox.attrs  core_armv8mml.h:com.dropbox.attrs  core_cm0.h:com.dropbox.attrs  core_cm0plus.h:com.dropbox.attrs  core_cm1.h:com.dropbox.attrs  core_cm23.h:com.dropbox.attrs  core_cm3.h:com.dropbox.attrs  core_cm33.h:com.dropbox.attrs  core_cm4.h:com.dropbox.attrs  core_cm7.h:com.dropbox.attrs  core_sc000.h:com.dropbox.attrs  core_sc300.h:com.dropbox.attrs  mpu_armv7.h:com.dropbox.attrs  mpu_armv8.h:com.dropbox.attrs  tz_context.h:com.dropbox.attrs
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
Graphics/: CMakeLists.txt
Graphics/Src/: dijkstra_old.cpp  main.cpp
Module/: CMakeLists.txt
Module/Inc/: baseModule.hpp  battery.hpp  button.hpp  communicate.hpp  encoder.hpp  imu.hpp  interrupt.hpp  irSensor.hpp  led.hpp  ledController.hpp  led_controller.hpp  lsm6dsrx_reg.h  moduleTest.hpp  motor.hpp  myShell.hpp  suctionFan.hpp  ws2812c.hpp
Module/Src/: battery.cpp  button.cpp  communicate.cpp  encoder.cpp  imu.cpp  interrupt.cpp  irSensor.cpp  led.cpp  ledController.cpp  led_controller.cpp  moduleTest.cpp  motor.cpp  myShell.cpp  suctionFan.cpp  ws2812c.cpp
Peripheral/: CMakeLists.txt
Peripheral/Inc/: led.hpp
Peripheral/Src/: led.cpp
